<resources>
    <string name="app_name">Zara Product Checker</string>
    <string name="app_name_open">Open with Zara Product Checker</string>
    <string name="drawer_layout_open">Open</string>
    <string name="drawer_layout_close">Close</string>
    <string name="profile_name"><b>Alejandro Almazán</b></string>
    <string name="profile_email">https://github.com/aalmazanarbs</string>
    <!-- Home -->
    <plurals name="product_added">
        <item quantity="one">Product added</item>
        <item quantity="other">Products added</item>
    </plurals>
    <string name="undo">UNDO</string>
    <string name="undo_product_info">%1$s removed</string>
    <string name="product_duplicated">Duplicated product %1$s size %2$s color %3$s</string>
    <string name="products_duplicated">One or more of the products to add are duplicated</string>
    <!-- New Product Dialog Builder -->
    <string name="dialog_search">Search</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_reset">Reset</string>
    <string name="dialog_all_colors">All colors</string>
    <string name="dialog_all_sizes">All sizes</string>
    <string name="dialog_product_url">Product URL</string>
    <string name="dialog_unknown_error">Unknown error adding new product</string>
    <string name="dialog_url_error">Invalid or empty Zara URL</string>
    <string name="dialog_zara_response_error">No response from Zara</string>
    <string name="dialog_product_error">No product found or retired or invalid</string>
    <!-- Settings -->
    <string name="preferences_name">Preferences</string>
    <string name="preference_category_background_checker">Background checker</string>
    <string name="preference_background_checker">Check products in background</string>
    <string name="preference_background_checker_summary">This will perform a background check periodically to detect changes in stock or prices</string>
    <string name="preference_background_checker_only_wifi">Only wifi</string>
    <string name="preference_background_checker_only_wifi_summary">Product background checker will only work over wifi data connection</string>
    <string name="preference_category_storage">Storage</string>
    <string name="preference_storage_clear_cache">Clear Cache</string>
    <string name="preference_storage_clear_cache_summary">This will free space in you external storage</string>
    <!-- Settings Preferences -->
    <string name="check_products_in_background">check_products_in_background</string>
    <string name="check_products_in_background_only_wifi">check_products_in_background_only_wifi</string>
    <string name="storage_clear_cache">storage_clear_cache</string>
    <!-- Notifications -->
    <string name="products_changes_notifications_channel_name">Products changes</string>
    <string name="detect_changes_products_check">Changes detected in products</string>
    <string name="has_changed_price_to"> has changed price to </string>
    <string name="is_now"> is now </string>
    <string name="check_products_notifications_channel_name">Check products (permanent if enabled)</string>
    <string name="checking_changes_products">Checking changes in products periodically</string>
    <!-- Network state container -->
    <string name="network_disconnected">There is no Internet connection</string>
    <!-- Product list adapter -->
    <string name="size_title">%1$s %2$s</string>
    <string name="color_and_availability">%1$s %2$s</string>
    <string name="more_info_size">Size</string>
    <string name="more_info_price">Price</string>
    <string name="product_not_found_info">Product retired or no found in Zara</string>
</resources>
