<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.preference.PreferenceCategory
        android:title="@string/preference_category_background_checker">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="@string/check_products_in_background"
            android:title="@string/preference_background_checker"
            android:summary="@string/preference_background_checker_summary"
            android:defaultValue="true" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="@string/check_products_in_background_only_wifi"
            android:title="@string/preference_background_checker_only_wifi"
            android:summary="@string/preference_background_checker_only_wifi_summary"
            android:defaultValue="false" />

    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>